# serialization_bakeoff

./: .gitignore  LICENSE  README.md  TODO  biome.json
backend/: Cargo.toml  build.rs
backend/src/: load_data.rs  main.rs  trip.proto  trip.rs  trip_flatbuffer.rs
backend_node/: Makefile  README.md  bebop.json  build.js  package-lock.json  package.json  tsconfig.json  watch.js
backend_node/src/: bops.gen.ts  cli.ts  index.js  index.ts  loadData.js  loadData.ts  pbf_trip.d.ts  pbf_trip.js  serializers.js  serializers.ts  trip.js  types.ts
backend_node/src/flatbuffers/: member-casual.ts  rideable-type.ts  server-response-all.ts  trip.ts
data/: data.csv
frontend/: avro.ts  bebop.json  bebop.ts  bops.gen.ts  build.js  capnp.ts  capnp_trip.d.ts  capnp_trip.js  capnp_trip.ts  cbor.ts  charts.ts  code.js  code.ts  deserializer.ts  flatbuffers.ts  index.html  json.ts  msgpack.ts  package-lock.json  package.json  pbf.ts  pbf_trip.js  proto.ts  protobuf_es.ts  protobuf_es_trip.ts  protobuf_trip.d.ts  protobuf_trip.js  trip.ts  tsconfig.json  updated_protobuf_trip.js
frontend/flatbuffers/: member-casual.ts  rideable-type.ts  server-response-all.ts  trip.ts
schemas/: out  trip.avsc  trip.bop  trip.capnp  trip.fbs  trip.proto  trip.ts
self_signed_cert/: localhost.crt  localhost.key  rootCA.crt  rootCA.key
