[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
bebop = "3.1.3"
capnp = "0.20.6"
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
csv = "1.3.1"
flatbuffers = "25.2.10"
prost = "0.13.5"
prost-types = "0.13.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[build-dependencies]
prost-build = "0.13.5"
bebop-tools = "3.1.3"
capnpc = "0.20.1"
