[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.23", default-features = false, features = ["ring"] }
bebop = "3.1.3"
capnp = "0.20.6"
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
csv = "1.3.1"
flatbuffers = "25.2.10"
prost = "0.13.5"
prost-types = "0.13.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
zstd = "0.13.3"
http-body-util = "0.1.3"
futures = "0.3.31"
bytes = "1.10.1"
apache-avro = "0.17.0"
log = "0.4.26"
env_logger = "0.11.7"
rand = "0.9.0"

[build-dependencies]
prost-build = "0.13.5"
bebop-tools = "3.1.3"
capnpc = "0.20.1"
